Fixed truncation, added search marks

--- a/Public/styles/application.css
+++ b/Public/styles/application.css
@@ -250,7 +250,7 @@ pre {
     overflow: auto;
     padding: 0.5em 0 0.5em 1em; }
     pre[class*="language-"] code[class*="language-"] {
-      tab-size: 3; }
+      tab-size: 4; }
   pre code {
     padding-left: 0;
     background-color: #FFF;
