--- a/Public/styles/components/syntax.scss
+++ b/Public/styles/components/syntax.scss
@@ -23,7 +23,7 @@ code {
 pre {
 	&[class*="language-"] {
 		& code[class*="language-"] {
-			tab-size: 3;
+			tab-size: 4;
 		}
 		overflow: auto;
 		padding: 0.5em 0 0.5em 1em;
